--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8" />
     <title>Search Engine</title>
     <style>
+      .image-container {
+        position: relative;
+        display: inline-block;
+        text-align: center;
+      }
+      #image-button {
+        position: absolute;
+        top: 50%;
+        left: 20%;
+        width: 200px;
+        height: 200px;
+        top: 415px;
+        left: 1135px;
+      }
+
+      .text-overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: black;
+        padding: 20px;
+      }
+
+      #search-container {
+        position: absolute;
+        top: 60px;
+        left: 10px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
       #search-bar {
         width: 50%;
-        margin: 20px auto;
-        padding: 10px;
+        margin-bottom: 10px;
+        padding: 15px;
         font-size: 16px;
       }
 
@@ -34,15 +70,20 @@
 
       #results li p {
         font-size: 14px;
-        color: #666;
+        color: #000000;
         margin: 5px 0 0;
       }
     </style>
   </head>
   <body>
-    <h1>Search Engine</h1>
-    <input type="text" id="search-bar" placeholder="Search..." />
-    <ul id="results"></ul>
-    <script src="index.js"></script>
+    <div class="image-container">
+      <img src="sustainasearch.png" alt="SustainaSearch" />
+      <button id="image-button" style="opacity: 0.05">Search</button>
+    </div>
+    <div id="search-container">
+      <input type="text" id="search-bar" placeholder="Search..." />
+      <ul id="results"></ul>
+    </div>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
