--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         height: 200px;
         top: 415px;
         left: 1135px;
+        z-index: 1;
       }
 
       .text-overlay {
@@ -78,12 +79,13 @@
   <body>
     <div class="image-container">
       <img src="sustainasearch.png" alt="SustainaSearch" />
-      <button id="image-button" style="opacity: 0.05">Search</button>
     </div>
+    <button id="image-button" style="opacity: 0">Search</button>
     <div id="search-container">
       <input type="text" id="search-bar" placeholder="Search..." />
       <ul id="results"></ul>
     </div>
+    <iframe id="searchResultsFrame" width="100%" height="400"></iframe>
     <script type="module" src="index.js"></script>
   </body>
 </html>
