--- a/src/index.html
+++ b/src/index.html
@@ -3,78 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Search Engine</title>
-    <style>
-      .image-container {
-        position: relative;
-        display: inline-block;
-        text-align: center;
-      }
-      #image-button {
-        position: absolute;
-        top: 50%;
-        left: 20%;
-        width: 200px;
-        height: 200px;
-        top: 415px;
-        left: 1135px;
-        z-index: 1;
-      }
-
-      .text-overlay {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: black;
-        padding: 20px;
-      }
-
-      #search-container {
-        position: absolute;
-        top: 60px;
-        left: 10px;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-
-      #search-bar {
-        width: 50%;
-        margin-bottom: 10px;
-        padding: 15px;
-        font-size: 16px;
-      }
-
-      #results {
-        list-style: none;
-        margin: 20px auto;
-        padding: 0;
-        width: 50%;
-      }
-
-      #results li {
-        margin-bottom: 10px;
-        padding: 10px;
-        background-color: #f0f0f0;
-        border-radius: 5px;
-      }
-
-      #results li a {
-        font-size: 18px;
-        font-weight: bold;
-        color: #333;
-        text-decoration: none;
-      }
-
-      #results li p {
-        font-size: 14px;
-        color: #000000;
-        margin: 5px 0 0;
-      }
-    </style>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="image-container">
@@ -85,7 +14,7 @@
       <input type="text" id="search-bar" placeholder="Search..." />
       <ul id="results"></ul>
     </div>
-    <iframe id="searchResultsFrame" width="100%" height="400"></iframe>
+    <iframe id="searchResultsFrame" width="50%" height="400"></iframe>
     <script type="module" src="index.js"></script>
   </body>
 </html>
