--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Search Engine</title>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="image-container">
@@ -14,7 +14,7 @@
       <input type="text" id="search-bar" placeholder="Search..." />
       <ul id="results"></ul>
     </div>
-    <iframe id="searchResultsFrame" width="50%" height="400"></iframe>
+    <iframe id="searchResultsFrame"></iframe>
     <script type="module" src="index.js"></script>
   </body>
 </html>
