--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Search Engine</title>
+    <title>SustainaSearch</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="image-container">
-      <img src="sustainasearch.png" alt="SustainaSearch" />
+      <img id="logo" src="sustainasearch.png" alt="SustainaSearch" />
+      <button id="logo-button">Search</button>
     </div>
-    <button id="image-button" style="opacity: 0">Search</button>
     <div id="search-container">
       <input type="text" id="search-bar" placeholder="Search..." />
       <ul id="results"></ul>
